🚀 Pre-GA Release v2.1.0
Major Features:
- Java 21 virtual thread optimizations (70% latency improvement, 4x throughput)
- Production-ready S3 async streaming with framework-aware dependency analysis
- Multi-release JAR configuration with auto-activation
- AGPL v3 + Commercial dual license model

Improvements:
- JarzLogger compliance (replaced System.err with unified logging)
- JARZ block size corrected to 512KB for optimal S3 performance
- GitHub Actions simplified to Java 21-only builds with ARM runner detection
- Website updated with dual license information

Security Updates:
- 10 Dependabot PRs merged (AWS SDK, dependencies)

Documentation:
- Contact information standardized to ecosystem@plasticity.cloud
- License files updated (LICENSE, LICENSE-AGPL, LICENSE-COMMERCIAL)
- Website footer with commercial licensing contact

Status: Pre-GA - Ready for production testing